[package]
name = "xdd"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Conway <arcgit@greatcactus.org>"]
description = "Decision diagrams including BDD, ZDD, MBDD, πDD and more for combinatorics."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/AndrewConway/xdd"
repository = "https://github.com/AndrewConway/xdd"
readme = "README.md"
keywords = ["bdd", "zdd", "boolean-expression", "set", "multiset"]
categories = ["combinatorics", "data-structures", "science", "mathematics"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num="0.4"

[dev-dependencies]
clap={version="3.2",features = [ "derive" ]}